more changes sing in

--- a/Login-system/css/style.css
+++ b/Login-system/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #ffffff; /* #c1bdba */
+  background: gray; /* #c1bdba */
   font-family: 'Titillium Web', sans-serif;
 }
 
